--- a/index.html
+++ b/index.html
@@ -5,11 +5,186 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- font-awesomed -->
+    <script src="https://kit.fontawesome.com/c515719502.js" crossorigin="anonymous"></script>
+    <!-- style-sheet -->
     <link rel="stylesheet" href="style.css">
     <title>Leader Board</title>
 </head>
 
 <body>
+    <!-- header start -->
+    <header>
+        <main>
+            <!-- top player and top blogs -->
+            <section class="container">
+                <div class="top-players">
+                    <!-- .player*6>img[src="images/players/player-$.png"]+h3{Top-Player-$} -->
+                    <h2 class="section-titile">Top Players</h2>
+                    <div class="players">
+                        <div class="player">
+                            <img src="images/players/player-1.png" alt="">
+                            <h3 class="player-name">Top-Player-1</h3>
+                        </div>
+                        <div class="player">
+                            <img src="images/players/player-2.png" alt="">
+                            <h3 class="player-name">Top-Player-2</h3>
+                        </div>
+                        <div class="player">
+                            <img src="images/players/player-3.png" alt="">
+                            <h3 class="player-name">Top-Player-3</h3>
+                        </div>
+                        <div class="player">
+                            <img src="images/players/player-4.png" alt="">
+                            <h3 class="player-name">Top-Player-4</h3>
+                        </div>
+                        <div class="player">
+                            <img src="images/players/player-5.png" alt="">
+                            <h3 class="player-name">Top-Player-5</h3>
+                        </div>
+                        <div class="player">
+                            <img src="images/players/player-6.png" alt="">
+                            <h3 class="player-name">Top-Player-6</h3>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+
+                <div class="top-blogs">
+                    <h2 class="section-titile">Top-blogs</h2>
+                    <div class="blogs">
+                        <article class="blog">
+                            <div class="thumbnail">
+                                <img src="images/blogs/blog-1.png" alt="">
+                            </div>
+                            <div class="blog-info">
+                                <h3 class="blog-title">
+                                    13 of My Favorite UI/UX Goodies
+                                </h3>
+                                <p class="blog-author">By <a href="">Danny Sapio</a></p>
+                            </div>
+                        </article>
+                        <article class="blog">
+                            <div class="thumbnail">
+                                <img src="images/blogs/blog-2.png" alt="">
+                            </div>
+                            <div class="blog-info">
+                                <h3 class="blog-title">
+                                    13 of My Favorite UI/UX Goodies
+                                </h3>
+                                <p class="blog-author">By <a href="">Danny Sapio</a></p>
+                            </div>
+                        </article>
+                        <article class="blog">
+                            <div class="thumbnail">
+                                <img src="images/blogs/blog-3.png" alt="">
+                            </div>
+                            <div class="blog-info">
+                                <h3 class="blog-title">
+                                    13 of My Favorite UI/UX Goodies
+                                </h3>
+                                <p class="blog-author">By <a href="">Danny Sapio</a></p>
+                            </div>
+                        </article>
+                        <article class="blog">
+                            <div class="thumbnail">
+                                <img src="images/blogs/blog-4.png" alt="">
+                            </div>
+                            <div class="blog-info">
+                                <h3 class="blog-title">
+                                    13 of My Favorite UI/UX Goodies
+                                </h3>
+                                <p class="blog-author">By <a href="">Danny Sapio</a></p>
+                            </div>
+                        </article>
+                    </div>
+
+                </div>
+            </section>
+
+            <!-- Latest section -->
+            <section class="container">
+                <h2 class="section-titile">Latest Courses</h2>
+                <div class="courses">
+                    <div class="course">
+                        <div class="course-banner">
+                            <img src="images/courses/course-1.png" alt="">
+                        </div>
+                        <div class="course-detail">
+                            <div class="course-title">
+                                <h3>React - The Complete Guide 2022</h3>
+                                <p class="course-author">Reed Krakoff.</p>
+                                <div class="course-info">
+                                    <div>
+                                        <i class="fa-solid fa-star filled"></i>
+                                        <i class="fa-solid fa-star filled"></i>
+                                        <i class="fa-solid fa-star filled"></i>
+                                        <i class="fa-solid fa-star filled"></i>
+                                        <i class="fa-solid fa-star empty"></i>
+                                        <span>4.5</span>
+                                    </div>
+                                    <div class="course-duration">
+                                        <i class="fa-solid fa-clock"></i>
+                                        0.30h
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course">
+                        <div class="course-banner">
+                            <img src="images/courses/course-2.png" alt="">
+                        </div>
+                        <div class="course-detail">
+                            <div class="course-title">
+                                <h3>React - The Complete Guide 2022</h3>
+                                <p class="course-author">Reed Krakoff.</p>
+                                <div class="course-info">
+                                    <div>
+                                        <i class="fa-solid fa-star filled"></i>
+                                        <i class="fa-solid fa-star filled"></i>
+                                        <i class="fa-solid fa-star filled"></i>
+                                        <i class="fa-solid fa-star filled"></i>
+                                        <i class="fa-solid fa-star empty"></i>
+                                        <span>4.5</span>
+                                    </div>
+                                    <div class="course-duration">
+                                        <i class="fa-solid fa-clock"></i>
+                                        0.30h
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course">
+                        <div class="course-banner">
+                            <img src="images/courses/course-3.png" alt="">
+                        </div>
+                        <div class="course-detail">
+                            <div class="course-title">
+                                <h3>React - The Complete Guide 2022</h3>
+                                <p class="course-author">Reed Krakoff.</p>
+                                <div class="course-info">
+                                    <div>
+                                        <i class="fa-solid fa-star filled"></i>
+                                        <i class="fa-solid fa-star filled"></i>
+                                        <i class="fa-solid fa-star filled"></i>
+                                        <i class="fa-solid fa-star filled"></i>
+                                        <i class="fa-solid fa-star empty"></i>
+                                        <span>4.5</span>
+                                    </div>
+                                    <div class="course-duration">
+                                        <i class="fa-solid fa-clock"></i>
+                                        0.30h
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <!-- header end -->
 
 </body>
 
